output/facebook/rocksdb/issues/874.txt
The error message is as follows:

```
tools/db_stress.cc:593:62: error: format specifies type 'long' but the argument has type 'size_t' (aka 'unsigned int') [-Werror,-Wformat]
    fprintf(stdout, "%-12s: Single deleted %ld times\n", "", single_deletes_);
                                           ~~~               ^~~~~~~~~~~~~~~
                                           %zu
1 error generated.
Makefile:1133: recipe for target 'tools/db_stress.o' failed
gmake[1]: *** [tools/db_stress.o] Error 1
gmake[1]: Leaving directory '/wrkdirs/usr/ports/databases/rocksdb/work/rocksdb-4.1'
*** Error code 1

Stop.
make: stopped in /usr/ports/databases/rocksdb
```

Thank you for your pull request and welcome to our community. We require contributors to sign our Contributor License Agreement, and we don't seem to have you on file. In order for us to review and merge your code, please sign up at https://code.facebook.com/cla - and if you have received this in error or have any questions, please drop us a line at cla@fb.com. Thanks!

@sunpoet see https://github.com/facebook/rocksdb/pull/873

Thanks for your contribution @sunpoet. I merged @yuslepukhin 's #873, so this should be fixed now.

